cd/argocd/argocd-init/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: argocd-system.mealsync.org
    external-dns.alpha.kubernetes.io/target: eaed81dc-037a-44be-9931-a5ae3d12bcea.cfargotunnel.com
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: argocd-ingres-5
  namespace: argocd
spec:
  rules:
    - host: argocd-system.mealsync.org
      http:
        paths:
          - backend:
              service:
                name: argogrpc
                port:
                  number: 443
            path: /
            pathType: Prefix
  # tls:
  # - hosts:
  #   - argocd.mealsync.org
  #   secretName: argocd-secret
